--- a/index.html
+++ b/index.html
@@ -8,375 +8,279 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
   </head>
+
   <body>
+
+    <!-- NAVBAR -->
     <nav id="desktop-nav">
-      <div class="logo">John Doe</div>
+      <div class="logo">SaiNaresh Kokku</div>
       <div>
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
-          <li><a href="#experience">Experience</a></li>
+          <li><a href="#experience">Skills</a></li>
           <li><a href="#projects">Projects</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </div>
     </nav>
+
     <nav id="hamburger-nav">
-      <div class="logo">John Doe</div>
+      <div class="logo">SaiNaresh Kokku</div>
       <div class="hamburger-menu">
         <div class="hamburger-icon" onclick="toggleMenu()">
-          <span></span>
-          <span></span>
-          <span></span>
+          <span></span><span></span><span></span>
         </div>
         <div class="menu-links">
           <li><a href="#about" onclick="toggleMenu()">About</a></li>
-          <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
+          <li><a href="#experience" onclick="toggleMenu()">Skills</a></li>
           <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
           <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
         </div>
       </div>
     </nav>
+
+    <!-- PROFILE -->
     <section id="profile">
       <div class="section__pic-container">
-        <img src="./assets/profile-pic.png" alt="John Doe profile picture" />
+        <img src="./assets/instapic.png" alt="Profile Photo" />
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
-        <h1 class="title">John Doe</h1>
-        <p class="section__text__p2">Frontend Developer</p>
+        <h1 class="title">SaiNaresh Kokku</h1>
+        <p class="section__text__p2">Java Backend & DevOps Engineer</p>
+
         <div class="btn-container">
-          <button
-            class="btn btn-color-2"
-            onclick="window.open('./assets/resume-example.pdf')"
-          >
-            Download CV
-          </button>
-          <button class="btn btn-color-1" onclick="location.href='./#contact'">
-            Contact Info
-          </button>
+          <button class="btn btn-color-2" onclick="window.open('./assets/resume-example.pdf')">Download CV</button>
+          <!-- <button class="btn btn-color-1" onclick="location.href='./#contact'">Contact Info</button> -->
+           <button class="btn btn-color-1" onclick="document.getElementById('contact').scrollIntoView({ behavior: 'smooth' });">Contact Info</button>
         </div>
+
         <div id="socials-container">
-          <img
-            src="./assets/linkedin.png"
-            alt="My LinkedIn profile"
-            class="icon"
-            onclick="location.href='https://linkedin.com/'"
-          />
-          <img
-            src="./assets/github.png"
-            alt="My Github profile"
-            class="icon"
-            onclick="location.href='https://github.com/'"
-          />
+          <img src="./assets/linkedin.png" class="icon"
+               onclick="location.href='https://linkedin.com/in/sainareshkokku59'" />
+
+          <img src="./assets/github.png" class="icon"
+               onclick="location.href='https://github.com/kokkusainaresh59'" />
         </div>
       </div>
     </section>
+
+    <!-- ABOUT -->
     <section id="about">
       <p class="section__text__p1">Get To Know More</p>
       <h1 class="title">About Me</h1>
+
       <div class="section-container">
         <div class="section__pic-container">
-          <img
-            src="./assets/about-pic.png"
-            alt="Profile picture"
-            class="about-pic"
-          />
+          <img src="./assets/about-pic.png" class="about-pic" />
         </div>
+
         <div class="about-details-container">
           <div class="about-containers">
+
             <div class="details-container">
-              <img
-                src="./assets/experience.png"
-                alt="Experience icon"
-                class="icon"
-              />
+              <img src="./assets/experience.png" class="icon" />
               <h3>Experience</h3>
-              <p>2+ years <br />Frontend Development</p>
+              <p>4.5+ Years<br />Java Backend & DevOps</p>
             </div>
+
             <div class="details-container">
-              <img
-                src="./assets/education.png"
-                alt="Education icon"
-                class="icon"
-              />
+              <img src="./assets/education.png" class="icon" />
               <h3>Education</h3>
-              <p>B.Sc. Bachelors Degree<br />M.Sc. Masters Degree</p>
+              <p>MCA — Osmania University<br />B.Sc — Sathavahana University</p>
             </div>
+
           </div>
+
           <div class="text-container">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quis
-              reprehenderit et laborum, rem, dolore eum quod voluptate
-              exercitationem nobis, nihil esse debitis maxime facere minus sint
-              delectus velit in eos quo officiis explicabo deleniti dignissimos.
-              Eligendi illum libero dolorum cum laboriosam corrupti quidem,
-              reiciendis ea magnam? Nulla, impedit fuga!
+              Java Backend & DevOps Engineer with 4.5+ years experience building scalable microservices,
+              automating CI/CD pipelines, and optimizing high-performance systems for telecom and banking
+              domains. I specialize in Spring Boot, SQL tuning, Docker, Jenkins, AWS, and designing
+              production-ready APIs that consistently improve performance, reduce latency, and enhance
+              reliability.
             </p>
           </div>
         </div>
       </div>
-      <img
-        src="./assets/arrow.png"
-        alt="Arrow icon"
-        class="icon arrow"
-        onclick="location.href='./#experience'"
-      />
+
+      <!-- <img src="./assets/arrow.png" class="icon arrow"
+           onclick="location.href='./#experience'" /> -->
+           <!-- onclick="document.getElementById('experience').scrollIntoView({ behavior: 'smooth' })"  -->
+           <img 
+           src="./assets/arrow.png" 
+           class="icon arrow"
+           alt="Arrow icon"
+           onclick="document.getElementById('experience').scrollIntoView({ behavior: 'smooth' })"
+         />
+         
+
     </section>
+
+
+    <!-- SKILLS -->
     <section id="experience">
       <p class="section__text__p1">Explore My</p>
-      <h1 class="title">Experience</h1>
+      <h1 class="title">Skills</h1>
+
       <div class="experience-details-container">
         <div class="about-containers">
+
+          <!-- Backend -->
           <div class="details-container">
-            <h2 class="experience-sub-title">Frontend Development</h2>
+            <h2 class="experience-sub-title">Backend Development</h2>
             <div class="article-container">
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>HTML</h3>
-                  <p>Experienced</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>CSS</h3>
-                  <p>Experienced</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>SASS</h3>
-                  <p>Intermediate</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>JavaScript</h3>
-                  <p>Basic</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>TypeScript</h3>
-                  <p>Basic</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>Material UI</h3>
-                  <p>Intermediate</p>
-                </div>
-              </article>
+
+              <article><img src="./assets/checkmark.png" class="icon" /><div><h3>Java</h3><p>Proficient</p></div></article>
+
+              <article><img src="./assets/checkmark.png" class="icon" /><div><h3>Spring Boot</h3><p>Proficient</p></div></article>
+
+              <article><img src="./assets/checkmark.png" class="icon" /><div><h3>Microservices</h3><p>Intermediate</p></div></article>
+
+              <article><img src="./assets/checkmark.png" class="icon" /><div><h3>REST APIs</h3><p>Proficient</p></div></article>
+
+              <article><img src="./assets/checkmark.png" class="icon" /><div><h3>Hibernate / JPA</h3><p>Proficient</p></div></article>
+
+              <article><img src="./assets/checkmark.png" class="icon" /><div><h3>JUnit & Mockito</h3><p>Proficient</p></div></article>
+
             </div>
           </div>
+
+          <!-- DevOps & DB -->
           <div class="details-container">
-            <h2 class="experience-sub-title">Frontend Development</h2>
+            <h2 class="experience-sub-title">DevOps & Databases</h2>
             <div class="article-container">
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>PostgreSQL</h3>
-                  <p>Basic</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>Node JS</h3>
-                  <p>Intermediate</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>Express JS</h3>
-                  <p>Intermediate</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>Git</h3>
-                  <p>Intermediate</p>
-                </div>
-              </article>
+
+              <article><img src="./assets/checkmark.png" class="icon" /><div><h3>Docker</h3><p>Intermediate</p></div></article>
+
+              <article><img src="./assets/checkmark.png" class="icon" /><div><h3>Jenkins (CI/CD)</h3><p>Intermediate</p></div></article>
+
+              <article><img src="./assets/checkmark.png" class="icon" /><div><h3>AWS (S3, Lambda)</h3><p>Intermediate</p></div></article>
+
+              <article><img src="./assets/checkmark.png" class="icon" /><div><h3>Linux Scripting</h3><p>Intermediate</p></div></article>
+
+              <article><img src="./assets/checkmark.png" class="icon" /><div><h3>MySQL</h3><p>Proficient</p></div></article>
+
+              <article><img src="./assets/checkmark.png" class="icon" /><div><h3>PostgreSQL</h3><p>Proficient</p></div></article>
+
             </div>
           </div>
+
         </div>
       </div>
-      <img
-        src="./assets/arrow.png"
-        alt="Arrow icon"
-        class="icon arrow"
-        onclick="location.href='./#projects'"
-      />
+
+      <img src="./assets/arrow.png" class="icon arrow"
+           onclick="location.href='./#projects'" />
     </section>
+
+
+    <!-- PROJECTS -->
     <section id="projects">
       <p class="section__text__p1">Browse My Recent</p>
       <h1 class="title">Projects</h1>
+
       <div class="experience-details-container">
         <div class="about-containers">
+
+          <!-- Project 1 -->
           <div class="details-container color-container">
             <div class="article-container">
-              <img
-                src="./assets/project-1.png"
-                alt="Project 1"
-                class="project-img"
-              />
+              <img src="./assets/project-1.png" class="project-img" />
             </div>
-            <h2 class="experience-sub-title project-title">Project One</h2>
+            <!-- <h2 class="experience-sub-title project-title">Telecom Platform Modernization</h2> -->
+            <h2 class="experience-sub-title project-title">Optimus</h2>
+            <p class="project-desc">
+              Migrated telecom workflows to Spring Boot microservices, improving maintainability by
+              40% and reducing API latency by 35%. Automated CI/CD pipelines using Jenkins + Docker.
+            </p>
             <div class="btn-container">
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Github
-              </button>
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Live Demo
-              </button>
+              <button class="btn btn-color-2 project-btn"
+                      onclick="location.href='https://github.com/'">Github</button>
             </div>
           </div>
+
+          <!-- Project 2 -->
           <div class="details-container color-container">
             <div class="article-container">
-              <img
-                src="./assets/project-2.png"
-                alt="Project 2"
-                class="project-img"
-              />
+              <img src="./assets/project-2.png" class="project-img" />
             </div>
-            <h2 class="experience-sub-title project-title">Project Two</h2>
+            <!-- <h2 class="experience-sub-title project-title">Core Banking Services</h2> -->
+            <h2 class="experience-sub-title project-title">KTB</h2>
+            <p class="project-desc">
+              Built 20+ APIs for systems handling 100K+ daily transactions with 99.8% uptime.
+              Improved PostgreSQL performance by 30% through SQL & indexing optimization.
+            </p>
             <div class="btn-container">
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Github
-              </button>
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Live Demo
-              </button>
+              <button class="btn btn-color-2 project-btn"
+                      onclick="location.href='https://github.com/'">Github</button>
             </div>
           </div>
+
+          <!-- Project 3 -->
           <div class="details-container color-container">
             <div class="article-container">
-              <img
-                src="./assets/project-3.png"
-                alt="Project 3"
-                class="project-img"
-              />
+              <img src="./assets/project-3.png" class="project-img" />
             </div>
-            <h2 class="experience-sub-title project-title">Project Three</h2>
+            <!-- <h2 class="experience-sub-title project-title">Loan Management System</h2> -->
+            <h2 class="experience-sub-title project-title">LMS</h2>
+            <p class="project-desc">
+              Developed backend modules using Spring Boot & MySQL. Optimized 40+ SQL queries,
+              improving reporting speed by 35% across loan workflows.
+            </p>
             <div class="btn-container">
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Github
-              </button>
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Live Demo
-              </button>
+              <button class="btn btn-color-2 project-btn"
+                      onclick="location.href='https://github.com/'">Github</button>
             </div>
           </div>
+
         </div>
       </div>
-      <img
-        src="./assets/arrow.png"
-        alt="Arrow icon"
-        class="icon arrow"
-        onclick="location.href='./#contact'"
-      />
+
+      <img src="./assets/arrow.png" class="icon arrow"
+           onclick="location.href='./#contact'" />
     </section>
+
+
+    <!-- CONTACT -->
     <section id="contact">
       <p class="section__text__p1">Get in Touch</p>
       <h1 class="title">Contact Me</h1>
+
       <div class="contact-info-upper-container">
+
         <div class="contact-info-container">
-          <img
-            src="./assets/email.png"
-            alt="Email icon"
-            class="icon contact-icon email-icon"
-          />
-          <p><a href="mailto:examplemail@gmail.com">Example@gmail.com</a></p>
+          <img src="./assets/email.png" class="icon contact-icon email-icon" />
+          <p><a href="mailto:manyu5959@gmail.com">manyu5959@gmail.com</a></p>
         </div>
+
         <div class="contact-info-container">
-          <img
-            src="./assets/linkedin.png"
-            alt="LinkedIn icon"
-            class="icon contact-icon"
-          />
-          <p><a href="https://www.linkedin.com">LinkedIn</a></p>
+          <img src="./assets/linkedin.png" class="icon contact-icon" />
+          <p><a href="https://linkedin.com/in/manyu5959">linkedin.com/in/sainareshkokku59</a></p>
         </div>
+
+        <div class="contact-info-container">
+          <img src="./assets/github.png" class="icon contact-icon" />
+          <p><a href="https://github.com/kokkusainaresh59">github.com/kokkusainaresh59</a></p>
+        </div>
+
       </div>
     </section>
+
+
     <footer>
       <nav>
         <div class="nav-links-container">
           <ul class="nav-links">
             <li><a href="#about">About</a></li>
-            <li><a href="#experience">Experience</a></li>
+            <li><a href="#experience">Skills</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
         </div>
       </nav>
-      <p>Copyright &#169; 2023 John Doe. All Rights Reserved.</p>
+      <p>Copyright © 2024 SaiNaresh Kokku. All Rights Reserved.</p>
     </footer>
+
     <script src="script.js"></script>
   </body>
 </html>
