linkedlink issue fixed

--- a/index.html
+++ b/index.html
@@ -250,12 +250,12 @@
 
         <div class="contact-info-container">
           <img src="./assets/email.png" class="icon contact-icon email-icon" />
-          <p><a href="mailto:manyu5959@gmail.com">manyu5959@gmail.com</a></p>
+          <p><a href="mailto:kokkusainaresh59@gmail.com@gmail.com">manyu5959@gmail.com</a></p>
         </div>
 
         <div class="contact-info-container">
           <img src="./assets/linkedin.png" class="icon contact-icon" />
-          <p><a href="https://linkedin.com/in/manyu5959">linkedin.com/in/sainareshkokku59</a></p>
+          <p><a href="https://linkedin.com/in/sainareshkokku59">linkedin.com/in/sainareshkokku59</a></p>
         </div>
 
         <div class="contact-info-container">
