--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 
         <div class="contact-info-container">
           <img src="./assets/email.png" class="icon contact-icon email-icon" />
-          <p><a href="mailto:kokkusainaresh59@gmail.com@gmail.com">manyu5959@gmail.com</a></p>
+          <p><a href="mailto:kokkusainaresh59@gmail.com">kokkusainaresh59@gmail.com</a></p>
         </div>
 
         <div class="contact-info-container">
