conatact no included

--- a/index.html
+++ b/index.html
@@ -258,6 +258,10 @@
           <p><a href="https://linkedin.com/in/sainareshkokku59">linkedin.com/in/sainareshkokku59</a></p>
         </div>
 
+       <div class="contact-info-container">
+  <img src="./assets/phone.png" class="icon contact-icon" />
+  <p>+91 8500662423</a></p>
+</div>
         <div class="contact-info-container">
           <img src="./assets/github.png" class="icon contact-icon" />
           <p><a href="https://github.com/kokkusainaresh59">github.com/kokkusainaresh59</a></p>
