changes made in projects

--- a/index.html
+++ b/index.html
@@ -193,10 +193,10 @@
               Migrated telecom workflows to Spring Boot microservices, improving maintainability by
               40% and reducing API latency by 35%. Automated CI/CD pipelines using Jenkins + Docker.
             </p>
-            <div class="btn-container">
+            <!-- <div class="btn-container">
               <button class="btn btn-color-2 project-btn"
                       onclick="location.href='https://github.com/'">Github</button>
-            </div>
+            </div> -->
           </div>
 
           <!-- Project 2 -->
@@ -210,10 +210,10 @@
               Built 20+ APIs for systems handling 100K+ daily transactions with 99.8% uptime.
               Improved PostgreSQL performance by 30% through SQL & indexing optimization.
             </p>
-            <div class="btn-container">
+            <!-- <div class="btn-container">
               <button class="btn btn-color-2 project-btn"
                       onclick="location.href='https://github.com/'">Github</button>
-            </div>
+            </div> -->
           </div>
 
           <!-- Project 3 -->
@@ -227,10 +227,10 @@
               Developed backend modules using Spring Boot & MySQL. Optimized 40+ SQL queries,
               improving reporting speed by 35% across loan workflows.
             </p>
-            <div class="btn-container">
+            <!-- <div class="btn-container">
               <button class="btn btn-color-2 project-btn"
                       onclick="location.href='https://github.com/'">Github</button>
-            </div>
+            </div> -->
           </div>
 
         </div>
