--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <p class="section__text__p2">Java Backend & DevOps Engineer</p>
 
         <div class="btn-container">
-          <button class="btn btn-color-2" onclick="window.open('./assets/resume-example.pdf')">Download CV</button>
+          <button class="btn btn-color-2" onclick="window.open('./assets/sainaresh_k_4.5yrs.pdf')">Download CV</button>
           <!-- <button class="btn btn-color-1" onclick="location.href='./#contact'">Contact Info</button> -->
            <button class="btn btn-color-1" onclick="document.getElementById('contact').scrollIntoView({ behavior: 'smooth' });">Contact Info</button>
         </div>
